# la-poste-de-moulinsart

./: .gitignore  .tmux-moulinsart.conf  COMMANDES_AGENTS.md  MCP_Documentation.html  OUTILS_EQUIPE.md  README.md  claude.md  deploy_claude_md.sh  documentation-poste.html  documentation-technique.html  ecosystem-manager.sh  email-watcher-nestor.sh  fastdaw_sprint1_brief.sh  moulinsart-manager.sh  send-mail-commandant.sh  send-mail.sh  start-services.sh  stop-services.sh  switch-agent.sh  test-demarrage.py  test-email.py  tmux-moulinsart.conf  update_agents.sh  workflow-poste-moulinsart.html
ARCHIVES/: RAPPORT_FINAL_MISSION_MOULINSART.md  api_project_management.md  manitoba-manager-simple.sh  moulinsart-manager-simple.sh
ARCHIVES/sos/: INFINITY_CLOUD_METHODOLOGY.md  PRD_TEMPLATE.md
agents/0/: claude.md
agents/dupont1/: backend_calibration.md  claude.md  send-mail.sh
agents/dupont2/: MISSION_COMPLETE_NEON_SHADERS.md  claude.md  send-mail.py  send-mail.sh  ui_calibration.md
agents/haddock/: 2025-09-24-caveat-the-messages-below-were-generated-by-the-u.txt  2025-10-02-lis-ton-claudemd-et-execute-tu-trouveras-ici-le.txt  2025-10-03-notification-systeme.txt  2025-10-04-caveat-the-messages-below-were-generated-by-the-u.txt  2025-10-05-caveat-the-messages-below-were-generated-by-the-u.txt  CLAUDE_MEMORY.md  Documentation_Bugs_Resolutions.md  Documentation_Technique_MonoCLI_Sprints.md  GUIDE_HAMMERSPOON_JEDI.md  RAPPORT_AUDIT_SYSTEME_JEDI.md  RAPPORT_CERTIFICATION_SPRINT21.md  Rapport_Fonctionnalites_Sprints.md  Sprint_6_Rapport_Final.html  claude.md  plan_sprint21.md  (+2 more)
agents/tintin/tests/: CMakeLists.txt  test_runner.cpp
docs/: MOULINSART_VS_CLAUDE_CODE.md
exports/: OPS_RUN_REPORT_project_test_automation.txt  PLANNING_REPORT_project_test_automation.txt  POST_DELIVERY_TEST_REPORT_Sprint7.1.txt
hooks/: email-detector-hook.py  email_trigger_hook.py  oracle_stop_hook.py
instructions-equipes-tmux/: CONSOLE-WEB.md  README.md  boite-outils.sh  reset-briefing.sh  template-claude.md
oracle-observability/: .tasks-nestor.json  API_DOCUMENTATION_AGENTS.md  API_DOCUMENTATION_AGENTS_V2.md  CLAUDE.md  NESTOR_MCP_TUTORIAL.md  ORACLE-ARCHITECTURE.md  TASK-MANAGEMENT-README.md  agent-task-poller.js  documentation-technique.html  email-watcher-tmux.sh  heartbeat-monitor-haddock.sh  heartbeat-monitor-nestor.sh  inactivity-trigger-nestor.sh  inactivity-trigger.sh  mail-monitor.sh  orbite-silence.sh  package.json  sample-data.js  send-with-ack.sh  tmux-notification-config.json
projects/logic-audio-daw/: AUTO_EXECUTE.sh  CMakeLists.txt  CMakeLists_update.txt  COMMANDES_CORRECTES.md  EXECUTE_SPRINT2.sh  GLOBAL_DASHBOARD.md  LogicAudioDAW  MASTER_ORCHESTRATION_PLAN.md  PRD.md  RAPPORT_NESTOR.md  SCREENSHOT_STATUS.md  SPRINT1_DASHBOARD.md  SPRINT1_DELIVERY_REPORT.md  SPRINT_2_4_DELIVERY.md  SPRINT_LAUNCH_INSTRUCTIONS.md  STATUS_SPRINT1.md  build.sh  standalone_test.cpp  test-compile.sh
projects/logic-audio-daw/Source/: Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/logic-audio-daw/Source/Core/: AudioEngine.cpp  AudioEngine.h  FXChain.cpp  FXChain.h  MasterBus.cpp  MasterBus.h  MidiRouter.cpp  MidiRouter.h  MultiTrackEngine.cpp  MultiTrackEngine.h  ProjectManager.h  Track.cpp  Track.h
projects/logic-audio-daw/Source/Tests/: AudioEngineTest.cpp  CMakeLists.txt  ExportTests.cpp  FXChainTests.cpp  MidiRoutingTests.cpp  MultiTrackTests.cpp  Sprint2_4_Test.cpp  run_all_tests.sh
projects/logic-audio-daw/Source/UI/: FXSlotComponent.cpp  FXSlotComponent.h  LoopComponent.cpp  LoopComponent.h  MainLayout.h  MasterSectionComponent.cpp  MasterSectionComponent.h  MultiTrackView.cpp  MultiTrackView.h  TrackComponent.cpp  TrackComponent.h  VUMeter.cpp  VUMeter.h
projects/logic-audio-daw/Source/UI/PianoRoll/: PianoRoll.h  PianoRollComponent.cpp  PianoRollComponent.h
(+281 files in other folders)
